--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,3 @@
-language: bash
+language: shell
 script:
-    - shellcheck test.sh
+  - bash -c 'shopt -s globstar nullglob; shellcheck **/*.{sh,ksh,bash}'
